# showcase-workshop-rstsr-ricc

./: .gitignore  .readthedocs.yaml  Cargo.toml  build.rs  readme.md  rustfmt.toml
.github/workflows/: clippy.yml
assets/: gen_assets.py  h2o-def2_jk.json  h2o-mo_coeff.npy  h2o-mo_energy.npy  h2o-tzvp.json  h2o_5-mo_coeff.npy  h2o_5-mo_energy.npy  h2o_5-pvdz.json  h2o_5-pvdz_jk.json  h2o_5-pvdz_ri.json  h2o_6-mo_coeff.npy  h2o_6-mo_energy.npy  h2o_6-pvdz.json  h2o_6-pvdz_jk.json  h2o_6-pvdz_ri.json  h2o_7-mo_coeff.npy  h2o_7-mo_energy.npy  h2o_7-pvdz.json  h2o_7-pvdz_jk.json  h2o_7-pvdz_ri.json  h2o_pp5-mo_coeff.npy  h2o_pp5-mo_energy.npy  h2o_pp5-pvdz.json  h2o_pp5-pvdz_jk.json  h2o_pp5-pvdz_ri.json
docs/: book.toml  custom.css
docs/src/: SUMMARY.md  index.md  intro.md  rhf_slow.md  ri_rccsd.md  ri_rccsdt.md  ri_rccsdt_slow.md  ri_rhf.md  ri_rhf_slow.md
src/: ccsd.rs  ccsdt.rs  ccsdt_faster.rs  diis.rs  lib.rs  main.rs  prelude.rs  rhf.rs  rhf_slow.rs  ri_rccsd.rs  ri_rccsdt.rs  ri_rccsdt_naive.rs  ri_rccsdt_slow.rs  ri_rhf.rs  ri_rhf_slow.rs  structs.rs  util.rs
workflows/: test-h2o.yml
