[package]
name = "showcase-workshop-rstsr-ricc"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = { version = "1.10" }
libcint = { version = "0.1", features = ["build_from_source", "static"] }
rstsr = { version = "*", features = ["linalg", "sci"], path = "/home/a/Git-Repo/rstsr/rstsr" }

rstsr-openblas = { version = "*", path = "/home/a/Git-Repo/rstsr/rstsr-openblas", optional = true }

[features]
use_openblas = ["dep:rstsr-openblas", "rstsr/openblas", "rstsr-openblas/openmp"]

[profile.dev]
opt-level = 2
